src/tests/snapshots/gitu__tests__stash__stash_working_tree_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added   file-one…                                                              |
                                                                                |
 Recent commits                                                                 |
 _______ main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Name of the stash: ›                                                          |
styles_hash: 277490403075f8ce
