src/tests/snapshots/gitu__tests__stash__stash_working_tree_when_everything_is_staged.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
▌Staged changes (2)                                                             |
▌added      file-one…                                                           |
▌added      file-two                                                            |
▌@@ -0,0 +1 @@                                                                  |
▌+blahonga                                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
! Cannot stash: working tree is empty                                           |
styles_hash: afd809f8df8f4679
